# roharchive

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  project-memory.md  project-plan.md  test-cases.md  test-extraction.cpp  vcpkg.json
.claude/: settings.local.json
resources/: README.md
scripts/: test-phase4.ps1  test-shell-extension.ps1  test-shell-integration.ps1
src/: CMakeLists.txt
src/extraction-engine/: ArchiveExtractor.h  ArchiveExtractorFactory.cpp  CMakeLists.txt  TarExtractor.cpp  TarExtractor.h  Utils.cpp
src/shell-extension/: ArchiveExtractor.cpp  ArchiveExtractor.h  ArchiveExtractorShell.def  CMakeLists.txt  ClassFactory.cpp  Registry.cpp  dllmain.cpp
src/ui-components/: CMakeLists.txt
src/utilities/: CMakeLists.txt
test-files/: README.md  demo.tar  sample.bz2  test.txt
test-files/demo/: file1.txt  file2.txt
test-files/demo/subfolder/: nested.txt
tests/: CMakeLists.txt
