# Extraction Engine Module
# This will be implemented in Phase 3

# Static library for extraction functionality
# set(EXTRACTION_ENGINE_SOURCES
#     GzipExtractor.cpp
#     GzipExtractor.h
#     Bzip2Extractor.cpp
#     Bzip2Extractor.h
#     TarExtractor.cpp
#     TarExtractor.h
#     ProgressCallback.h
# )

# add_library(ExtractionEngine STATIC ${EXTRACTION_ENGINE_SOURCES})
# target_link_libraries(ExtractionEngine PRIVATE ZLIB::ZLIB BZip2::BZip2)