# UI Components Module
# This will be implemented in Phase 5

# Static library for UI components
# set(UI_COMPONENTS_SOURCES
#     ProgressDialog.cpp
#     ProgressDialog.h
#     ErrorDialog.cpp
#     ErrorDialog.h
#     OptionsDialog.cpp
#     OptionsDialog.h
# )

# add_library(UIComponents STATIC ${UI_COMPONENTS_SOURCES})
# target_link_libraries(UIComponents PRIVATE comctl32 user32)