# Utilities Module
# Common helper functions and utilities

# Static library for utility functions
# set(UTILITIES_SOURCES
#     FileUtils.cpp
#     FileUtils.h
#     PathUtils.cpp
#     PathUtils.h
#     StringUtils.cpp
#     StringUtils.h
#     RegistryUtils.cpp
#     RegistryUtils.h
# )

# add_library(Utilities STATIC ${UTILITIES_SOURCES})
# target_link_libraries(Utilities PRIVATE shlwapi)